--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pin Consistency Check Tool V.1.0.1",
+  "name": "Pin Consistency Check Tool V.1.0.1",
   "icons": [
     {
       "src": "favicon.ico",
